Record completed AEJE lab work so the remaining-labs track and BayPay list-by-customer live in git.
Co-authored-by: Cursor <cursoragent@cursor.com>